# aws-datapipeline-practice

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: Architecture.md  Solution.md
infra/: .env.template  Dockerfile
notebooks/: ExploreData.ipynb  LoadData.ipynb  TestConnection.ipynb  profiling_report.html
